# DeepRenPyTrans

./: .env.example  .gitignore  LICENSE  README.de.md  README.es.md  README.fr.md  README.md  README.pt.md  README.ru.md  README.zh.md  config.example.yaml  gui_server.py  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh
.github/: FUNDING.yml
android/: build_apk.sh  compress_assets.py  inject_x_assets.py  restore_compressed_assets.py
deeprenpytrans/: __init__.py  auditor.py  cli.py  config.py  extractor.py  filters.py  hooks_generator.py  translator.py
docs/: structure.md  translation_plan.md
