[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deeprenpytrans"
version = "1.0.0"
description = "AI-powered universal translator for Ren'Py visual novel games"
readme = "README.md"
license = {text = "GNU Affero General Public License v3.0"}
requires-python = ">=3.8"
authors = [
    {name = "DeepRenPyTrans Contributors"}
]
keywords = ["renpy", "translation", "ai", "visual-novel", "deepseek", "openai", "localization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Localization",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Danko-Novak/DeepRenPyTrans"
Repository = "https://github.com/Danko-Novak/DeepRenPyTrans"
Issues = "https://github.com/Danko-Novak/DeepRenPyTrans/issues"

[project.scripts]
deeprenpytrans = "deeprenpytrans.cli:main"

[tool.setuptools.packages.find]
include = ["deeprenpytrans*"]

[tool.ruff]
line-length = 100
target-version = "py38"
